feature: seed-sync-server&schedulerTask
